selected task is sighed

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
-.red-selected {
-    background-color: gray;
+.taskselected {
+    text-decoration: line-through;
+    background-color:lightgray;
 }
