--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
+body {
+    font-size:20px;
+}
+
 .taskselected {
     text-decoration: line-through;
     background-color:lightgray;
+}
+.material-icons {
+    color:red;
 }
